--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,31 +1,43 @@
+body{
+	font-family: 'Open Sans Condensed', sans-serif;
+}
+
 /****  Nav Bar *****/
-.nav {
+header {
 	background-color: #568ca3;
 	color: white;
 	margin: 0;
-	padding: 40px;
-	border: 2px solid black;
+	padding-bottom: 12px;
+	border-bottom: 5px solid #a17558;
+	/*border: 2px solid black;*/
 }
 
 header h1{
 	margin-left:20px;
-	display: inline;
+	display: inline-block;
 }
 
 header ul {
+	/*height: 100%;*/
 	float: right;
+	font-size: 1.75em;
 	list-style: none;
-	border: 2px solid black;
 	padding: 0;
-	margin: 0;
+	margin-top: 0;
+	border-left: 2px solid #2b5a70;
 }
 header ul li {
 	/*display: inline-block;*/
-	padding: 0 10px 5px;
+	padding: 5px 15px;
 }
+
+header ul li:first-child{
+	border-bottom: 2px solid #2b5a70;
+}
+
 header a {
 	text-decoration: none;
-	/*color: white;*/
+	color: white;
 }
 
 ul{
@@ -46,28 +58,28 @@ a{
 }
 
 /***** Dashboard column display ******/
-.all_things {
-	/*border: solid 1px black;*/
-	width: 95%;
 
-}
-
-.all_things div {
-	width: 28%;
+#all_things div {
+	width: 26%;
 	height: 450px;
-	border: solid 1px black;
-	/*vertical-align:super;*/
-	float: right;
-	margin-left: 33px;
-	padding: 10px;
+	margin: 1%;
+	display: inline-block;
+	background-color: #dbd7ce;
+	/*border: solid 1px black;*/
+	vertical-align:super;
+	/*float: right;*/
+	padding: 30px;
 	overflow:scroll;
 	position: relative;
 }
 
-.all_things h2 {
+#all_things h2 {
   margin-top: 0;
 }
 
+#all_things li a {
+	text-decoration: underline;
+}
 
 .participating a{
 	color: #bd3e5a;
@@ -93,12 +105,15 @@ ul{
 
 .participating a{
 	color: #bd3e5a;
+	font-weight: 900;
 }
 
-.plus {
-    position: absolute;
-    top: 0px;
-    right: 10px;
+.add {
+	font-family: 'sans-serif';
+	text-decoration: none;
+  position: absolute;
+  top: 0px;
+  right: 10px;
 }
 
 /*
