--- a/app/views/chores/show.html.erb
+++ b/app/views/chores/show.html.erb
@@ -15,8 +15,20 @@ Date: <%=@chore.happen_at%><br>
 <% elsif !current_user.participating_in_chore?(@chore.id)%>
 	<%= link_to "Sign Up For This Chore", chore_participation_path(@chore), method: 'post' %>
 <% end %>
-
 </div>
+
+
+	<% if @chore.chore_doers.nil? %>
+  	<h4> No one is signed up for this chore! </h4>
+  <% else %>
+		<h4>People signed up for this chore:</h4>
+		<% @chore.chore_doers.each do |name| %>
+		<ul>
+			<li><%= name.first_name %></li>
+		</ul>
+	    <% end %>
+	<% end %>
+
 
 <div>
 	<h2>Comments</h2>
