--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
 			    <%= link_to "Show", event %>
 			    <%= link_to "Edit", edit_event_path(event) %>
 			    <%= link_to "Remove", event, method: :delete, data: { confirm: "Are you sure?" } %></li>
-	  		</ul> <br><br>
+	  		</ul> 
 	  	<%end%>
 			<!-- </fieldset> -->
 	</div>
@@ -38,13 +38,13 @@
 			  <% elsif current_user.participating_in_bill?(bill.id) %>
 			    <li class="participating item"><%= link_to bill.title, bill_path(bill) %></li>
 			  <%else%>
-			    <li class="item"><%= link_to bill.title, bill_path(bill) %>
+			    <li class="item"><%= link_to bill.title, bill_path(bill) %><br>
 			  <%end%>  
 			    <%= bill.description %><br>
 			    <%= link_to "Show", bill %>
 			    <%= link_to "Edit", edit_bill_path(bill) %>
 			    <%= link_to "Remove", bill, method: :delete, data: { confirm: "Are you sure?" } %></li>
-	  	</ul> <br><br>
+	  	</ul>
 		<%end%>
 	<!-- </fieldset> -->
 	</div>
