--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,13 @@
-<h2>Welcome</h2>
+<div class="welcome_page">
+	<h1>Welcome to Room-Eez!</h1>
+
+	<h3>Does Parth owe you money for eggs?</h3>
+	<h5>Tell him how much he is indebted to you!</h5>
+	<h3>Did Steve forget to make your bed?</h3>
+	<h5>Remind him to do that.</h5>
+	<h3>Are you throwing yourself a Quinceanera this weekend?</h3>
+	<h5>Let your roommates know</h5>
+
+	<p>Get your shit together.</p>
+	<p>Shit together. </p>
+</div>
