Did some ajaxy stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <body>
 	
 	<div class="container">
-
+	<header>
 		<h1><%= link_to "Room-Eez", root_path %></h1>
 		<ul>
 			<% if session[:user_id] %>
