--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,9 @@
 
 	<div id= "events_nav">
 		<!-- <fieldset id="events_nav"> -->
-		<legend><h2>Events</h2></legend>
+		<header class="item"><h2>Events</h2>
 		<span class = "add"><%= link_to "+", new_event_path, class:"new"%></span>
+		</header>
 		<% @events.each do |event|%>
 			<ul>
 				<% if current_user.id == event.creator_id %>
@@ -18,7 +19,6 @@
 			  	<li class="item"><%= link_to event.name, event_path(event) %><br>
 			  <% end %>
 			    <%= event.description %><br>
-			    <%= link_to "Show", event %>
 			    <%= link_to "Edit", edit_event_path(event) %>
 			    <%= link_to "Remove", event, method: :delete, data: { confirm: "Are you sure?" } %></li>
 	  		</ul> 
@@ -29,23 +29,24 @@
 
 	<div id="bills_nav">
 	<!-- <fieldset id="events_nav"> -->
-		<legend><h2>Bills</h2></legend>
+		<header class="item"><h2>Bills</h2>
 		<span class = "add"><%= link_to "+", "/bills/new", class:"new"%></span>
-		<% @bills.each do |bill|%>
+		</header>
 		<ul>
+		<% @bills.each do |bill|%>
 				<% if current_user.id == bill.creator_id %>
-			    <li class="creator item"><%= link_to bill.title, bill_path(bill) %></li>
+			    <li class="creator item"><%= link_to bill.title, bill_path(bill) %>
 			  <% elsif current_user.participating_in_bill?(bill.id) %>
-			    <li class="participating item"><%= link_to bill.title, bill_path(bill) %></li>
+			    <li class="participating item"><%= link_to bill.title, bill_path(bill) %>
 			  <%else%>
-			    <li class="item"><%= link_to bill.title, bill_path(bill) %><br>
-			  <%end%>  
+			    <li class="item"><%= link_to bill.title, bill_path(bill) %>
+			  <%end%>
+			  <br>
 			    <%= bill.description %><br>
-			    <%= link_to "Show", bill %>
 			    <%= link_to "Edit", edit_bill_path(bill) %>
 			    <%= link_to "Remove", bill, method: :delete, data: { confirm: "Are you sure?" } %></li>
-	  	</ul>
 		<%end%>
+	  	</ul>
 	<!-- </fieldset> -->
 	</div>
 
