--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@ header h1{
 	margin-left:20px;
 	top: 12px;
 	display: inline-block;
+	font-size: 2.5em;
 }
 
 header ul {
@@ -25,16 +26,11 @@ header ul {
 	font-size: 1.75em;
 	list-style: none;
 	padding: 0;
-	margin-top: 0;
-	border-left: 2px solid #2b5a70;
+	margin-top: 10px;
 }
 header ul li {
 	/*display: inline-block;*/
 	padding: 5px 15px;
-}
-
-header ul li:first-child{
-	border-bottom: 2px solid #2b5a70;
 }
 
 header a {
