--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -1,5 +1,5 @@
 <div class="show_page">
-	<h2><%= @bill.title%></h2>
+	<h2><%= @bill.name%></h2>
 	Description: <%= @bill.description%><br>
 	Amount: <%=@bill.cost%><br>
 
