--- a/app/views/users/calendar.html.erb
+++ b/app/views/users/calendar.html.erb
@@ -4,15 +4,17 @@
     <%=h @date.strftime("%B %Y") %>
     <%= link_to ">", :month => (@date.end_of_month+1).strftime("%Y-%m") %>
   </h2>
-  <%= calendar_for @bill_list, :year => @date.year, :month => @date.month do |calendar| %>
+  <%= calendar_for @master_list, :year => @date.year, :month => @date.month do |calendar| %>
     <%= calendar.head('Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday') %>
-    <%= calendar.day(:day_method => :updated_at) do |date, bills| %>
+
+    <%= calendar.day(:day_method => :happen_at) do |date, events| %>
       <%= date.day %>
       <ul>
-        <% for bill in bills %>
-          <li><%= link_to h(bill.name), bill %></li>
+        <% for event in events %>
+          <li><%= link_to "#{h(event.name)} (#{event.class.to_s.downcase})", event %></li>
         <% end %>
       </ul>
     <% end %>
   <% end %>
+
 </div>
