--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-<h1 id="user_name"><%= @user.first_name %>'s Profile Page</h2>
+<h1 class="user_name"><%= @user.first_name %>'s Profile Page</h2>
+	<span><%= link_to "Master Calendar", calendar_users_path, class:"user_name" %></span>
 
 
 
